@@ -8,16 +8,16 @@
 #include "util/util.h"
 #include "Light.h"
 #include "EntityInstanceGroup.h"
-//TODO : add multiple shader functionality to scene (shadertype member in meshentity probably)
-//TODO: add light support
 
 class Scene {
 public:
 	~Scene();
 	void Init();
 	MeshEntity* CreateMeshEntity(const std::string& filename, MeshShaderMode shader_mode = MeshShaderMode::LIGHTING);
-	PointLight* CreateLight();
+	PointLight* CreatePointLight();
+	SpotLight* CreateSpotLight();
 	auto& GetPointLights() { return m_point_lights; }
+	auto& GetSpotLights() { return m_spot_lights; }
 	BaseLight& GetAmbientLighting() { return m_global_ambient_lighting; };
 	void LoadScene();
 	void UnloadScene();
@@ -28,6 +28,7 @@ private:
 	BaseLight m_global_ambient_lighting;
 	std::vector<std::future<void>> m_futures;
 	std::vector<EntityInstanceGroup*> m_mesh_instance_groups;
+	std::vector<SpotLight*> m_spot_lights;
 	std::vector <PointLight*> m_point_lights;
 	std::vector<BasicMesh*> m_mesh_data;
 };
