@@ -14,8 +14,8 @@ Size=339,180
 Collapsed=0
 
 [Window][Tools]
-Pos=22,34
-Size=409,208
+Pos=-3,-1
+Size=417,273
 Collapsed=0
 
 [Window][Example: Simple layout]
