@@ -1,0 +1,2 @@
+# Blender 3.4.1 MTL File: 'None'
+# www.blender.org
