@@ -8,6 +8,7 @@
 
 
 void Renderer::Init() {
+	double time_start = glfwGetTime();
 
 	shaderLibrary.Init();
 	grid_mesh.Init();
@@ -19,16 +20,22 @@ void Renderer::Init() {
 	auto cube3 = scene.CreateMeshEntity("./res/meshes/cube/cube.obj");
 	auto orange = scene.CreateMeshEntity("./res/meshes/oranges/orange.obj");
 	for (float i = 0; i < 108.0f; i++) {
-		auto l = scene.CreateLight();
+		auto l = scene.CreatePointLight();
 		l->SetColor(i / 108.0f, cosf(ExtraMath::ToRadians(i * 10.0f / 3.0f)), sinf(ExtraMath::ToRadians(i * 10.0f / 3.0f)));
 	}
+	auto sl = scene.CreateSpotLight();
 	scene.LoadScene();
+	sl->SetPosition(0.0f, 10.0f, 0.0f);
+	sl->SetColor(0.8f, 0.0f, 0.0f);
+	sl->SetLightDirection(1.0f, 0.0f, 0.0f);
 	orange->SetPosition(100.0f, 10.0f, 0.0f);
 	cube->SetPosition(10.0f, 0.0f, 0.0f);
-	cube2->SetPosition(0.0f, 0.0f, 0.0f);
+	cube->SetRotation(45.0f, 45.0f, 0.0f);
+	cube2->SetPosition(10.0f, 0.0f, 0.0f);
 	cube3->SetScale(200.0f, 5.0f, 200.0f);
+	cube3->SetRotation(0.0f, 0.0f, 0.0f);
 
-	PrintUtils::PrintSuccess("Renderer initialized");
+	PrintUtils::PrintSuccess(std::format("Renderer initialized in {}ms", PrintUtils::RoundDouble((glfwGetTime() - time_start) * 1000)));
 }
 
 void Renderer::DrawGrid() {
@@ -41,15 +48,18 @@ void Renderer::DrawGrid() {
 }
 
 void Renderer::RenderScene() {
-	static glm::fvec3 atten_vals = glm::fvec3(1.0f, 0.05f, 0.01f);
+	static std::vector<double> vals = { 1, 1, 1, 1, 1 };
 	static float angle = 0;
 	static float x = 0.0f;
 	static float z = 0.0f;
 	float angle_offset = 0.0f;
 
-	shaderLibrary.flat_color_shader.ActivateProgram();
 	for (auto light : scene.GetPointLights()) {
-		light->SetAttenuation(atten_vals.x, atten_vals.y, atten_vals.z);
+		light->SetAttenuation(vals[0], vals[1], vals[2]);
+		light->SetMaxDistance(vals[3]);
+		if (vals[4] == 0.0) {
+			light->SetMaxDistance(0);
+		}
 		angle += 0.005 / 3.0f;
 		angle_offset += 10.0f / 3.0f;
 		x = 90.0f * cosf(ExtraMath::ToRadians(angle + angle_offset));
@@ -60,28 +70,42 @@ void Renderer::RenderScene() {
 		shaderLibrary.flat_color_shader.SetColor(light_color.x, light_color.y, light_color.z);
 	}
 
-	DrawPointLights();
+	if (static_cast<bool>(vals[4])) DrawLightMeshVisuals();
+
+	auto light = scene.GetSpotLights()[0];
+	auto cam_target = glm::normalize(p_camera->GetTarget());
+	auto cam_pos = p_camera->GetPos();
+
+	//light->SetPosition(cam_pos.x, cam_pos.y, cam_pos.z);
+	light->SetLightDirection(-cam_target.x, -cam_target.y, -cam_target.z);
+
 	DrawLightingEntities();
 
 	skybox.Draw(ExtraMath::GetCameraTransMatrix(p_camera->GetPos()) * p_camera->GetMatrix() * projectionMatrix);
 	DrawGrid();
 
 	ControlWindow::CreateBaseWindow();
-	atten_vals = ControlWindow::DisplayAttenuationControls();
+	vals = ControlWindow::DisplayPointLightControls(scene.GetPointLights().size());
 	ControlWindow::Render();
 
 }
 
-void Renderer::DrawPointLights() {
+void Renderer::DrawLightMeshVisuals() {
+	shaderLibrary.lighting_shader.ActivateProgram();
 	shaderLibrary.flat_color_shader.ActivateProgram();
 	for (auto light : scene.GetPointLights()) {
 		glm::fvec3 light_color = light->GetColor();
-		shaderLibrary.flat_color_shader.SetWVP(light->GetWorldTransform().GetMatrix() * p_camera->GetMatrix() * projectionMatrix);
+		shaderLibrary.flat_color_shader.SetWVP(light->GetMeshVisual()->GetWorldTransform()->GetMatrix() * p_camera->GetMatrix() * projectionMatrix);
 		shaderLibrary.flat_color_shader.SetColor(light_color.x, light_color.y, light_color.z);
-		DrawMeshWithShader(light->GetCubeVisual()->GetMeshData(), 1, shaderLibrary.flat_color_shader);
+		DrawMeshWithShader(light->GetMeshVisual()->GetMeshData(), 1, shaderLibrary.flat_color_shader);
 	}
 
-
+	for (auto light : scene.GetSpotLights()) {
+		glm::fvec3 light_color = light->GetColor();
+		shaderLibrary.flat_color_shader.SetWVP(light->GetMeshVisual()->GetWorldTransform()->GetMatrix() * p_camera->GetMatrix() * projectionMatrix);
+		shaderLibrary.flat_color_shader.SetColor(light_color.x, light_color.y, light_color.z);
+		DrawMeshWithShader(light->GetMeshVisual()->GetMeshData(), 1, shaderLibrary.flat_color_shader);
+	}
 }
 
 void Renderer::DrawLightingEntities() {
@@ -91,6 +115,7 @@ void Renderer::DrawLightingEntities() {
 	shaderLibrary.lighting_shader.SetCamera(glm::colMajor4(p_camera->GetMatrix()));
 
 	shaderLibrary.lighting_shader.SetPointLights(scene.GetPointLights());
+	shaderLibrary.lighting_shader.SetSpotLights(scene.GetSpotLights());
 	shaderLibrary.lighting_shader.SetAmbientLight(scene.GetAmbientLighting());
 	shaderLibrary.lighting_shader.SetViewPos(p_camera->GetPos());
 
@@ -111,7 +136,7 @@ template <typename T> void Renderer::DrawMeshWithShader(BasicMesh* mesh_data, un
 		ASSERT(materialIndex < mesh_data->m_textures.size());
 
 		if (mesh_data->m_materials[materialIndex].specular_texture != nullptr) mesh_data->m_materials[materialIndex].specular_texture->Bind(TextureUnits::SPECULAR_TEXTURE_UNIT);
-		mesh_data->m_materials[materialIndex].diffuse_texture->Bind(TextureUnits::COLOR_TEXTURE_UNIT);
+		mesh_data->m_materials[materialIndex].diffuse_texture->Bind(TextureUnits::COLOR_TEXTURE_UNIT); // no check required as there will always be a texture due to the default texture system
 
 		shader.SetMaterial(mesh_data->m_materials[materialIndex]);
 
